second figure as one button for start/stop motion

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-12"> 
-				<button class="btn center-block" id="start">Start</button>
+				<button class="btn center-block" id="start-stop-2">Start/Stop</button>
 				<br>
-				<button class="btn center-block" id="stop">Stop</button>
+				<!-- <button class="btn center-block" id="stop">Stop</button> -->
 			</div>
 		</div>
 	</div>
